New entries as of Aug 4 2024

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -53,15 +53,25 @@
 
     <div>
         <input type="checkbox" id="incUp">
-        <label for="incuP"> - Include Uppercase characters?</label><br>
+        <label for="incuP"> - Include UPPERCASE characters?</label><br>
         <input type="checkbox" id="incLow">
         <label for="incLow"> - Include lowercase characters?</label><br>
         <input type="checkbox" id="incNum">
-        <label for="incNum"> - Include numbers?</label><br>
+        <label for="incNum"> - Include Numb3rs?</label><br>
         <input type="checkbox" id="incSpe">
-        <label for="incSpe"> - Include special characters?</label><br>
+        <label for="incSpe"> - Include $pec!@l characters?</label><br>
+        <button id="btn7">GENERATE</button>
+    </div><br>
+
+    <div>
+        <label for="userInput">SORT NUMBERS BY USER INPUT:</label><br>
+        <input type="number"id="userInput"><br>
+        <button id="btn8">ADD</button>
+        <button id="btn9">SORT</button>
+        <button id="btn10">RESET</button>
+        <p id="userInputDisplay"></p>
+        <p id="displaySorted"></p>
     </div>
-    <button id="btn7">GENERATE</button>
     
     <script src="javascriptPrac.js"></script>
 </body>
