New practice entries as of Aug 8 2024

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -7,6 +7,10 @@
     <title>My Webpage</title>
 </head>
 <body>
+    <div id="clock-container">
+        <div id="clock">00:00:00</div>
+    </div>
+    
     <h1 id="h1">HELLO WORLD!</h1>
     <p id="p1">Lorem ipsum dolor</p>
     <button id="btn1">CHANGE</button><br><br>
