New practice entries as of Aug 10 2024

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -37,7 +37,7 @@
     <input type="radio" id="rad1" name="radios">
     <input type="radio" id="rad2" name="radios">
     <input type="radio" id="rad3" name="radios">
-    <p id="p4" class="p2">HELLO!</p>
+    <p id="p4" class="p2"></p>
 
     <label for="in3" id="lbl1">NUMBER GUESSING GAME FROM 1 - 100:</label><br>
     <input type="number" id="in3"><br>
@@ -75,6 +75,17 @@
         <button id="btn10">RESET</button>
         <p id="userInputDisplay"></p>
         <p id="displaySorted"></p>
+    </div>
+
+    <div id="stopwatch-container">
+        <div id="stopwatch">00:00:00:00</div>
+    </div>
+    <div id="lap"></div>
+    <div id="stopwatchBtns">
+        <button id="startBtn">START</button>
+        <button id="lapBtn">LAP</button>
+        <button id="stopBtn">STOP</button>
+        <button id="resetBtn">RESET</button>
     </div>
     
     <script src="javascriptPrac.js"></script>
