New practice entries as of Aug 15 2024

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -87,6 +87,15 @@
         <button id="stopBtn">STOP</button>
         <button id="resetBtn">RESET</button>
     </div>
+
+    <div id="rgbDiv">
+        <h1 id="hello">HELLO</h1>
+        <p class="colors">RED</p>
+        <p class="colors">GREEN</p>
+        <p class="colors">BLUE</p>
+    </div>
+
+    <div id="arrow">PRESS ARROW KEYS TO MOVE</div>
     
     <script src="javascriptPrac.js"></script>
 </body>
