--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -9,8 +9,9 @@
 <body>
     <div id="clock-container">
         <div id="clock">00:00:00</div>
-    </div>
-    
+    </div><br>
+
+    <button id="hide" class="buttons" title="Temporarily hides all elements in the page.">HIDE ALL</button>
     <h1 id="h1">HELLO WORLD!</h1>
     <p id="p1">Lorem ipsum dolor</p>
     <button id="btn1">CHANGE</button><br><br>
